flux/apps/personal/atlassian-jira/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: jira
    namespace: atlassian
    labels:
        app: jira
spec:
    replicas: 0 # SETUP RESOURCE STUFF BEFORE RE-ENABLING JIRA
    selector:
        matchLabels:
            app: jira

    template:
        metadata:
            name: jira
            labels:
                app: jira

        spec:
            securityContext:
                fsGroup: 999
            imagePullSecrets:
                - name: regcred
            containers:
                - name: jira
                  image: registry.axiom.lucasfehres.nl/private-images/atlassian-jira:11.3.2
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 8080
                        protocol: TCP
                  volumeMounts:
                      - mountPath: /var/jira
                        name: jira-home
            restartPolicy: Always
            volumes:
                - name: jira-home
                  persistentVolumeClaim:
                      claimName: jira-home
