flux/apps/personal/atlassian-jira/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: jira
    namespace: atlassian
spec:
    parentRefs:
        - name: tls-gateway
          namespace: kube-system
    hostnames:
        - "jira.axiom.lucasfehres.nl"
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: jira
                port: 80

                filters:
                    - type: ExtensionRef
                      extensionRef:
                          group: traefik.io
                          kind: Middleware
                          name: authentik
